Directory: minor cosmetic fixes for links, user pictures, spacing

--- a/web/modules/custom/breema/css/views.breema-directory.css
+++ b/web/modules/custom/breema/css/views.breema-directory.css
@@ -11,7 +11,7 @@ p.address {
 
 a.user-picture {
   border: none;
-  float: left;
+  float: right;
   margin: 0 1em 0 0;
 }
 
@@ -49,13 +49,22 @@ ol.location-results .item-list ul li {
   margin: 0;
 }
 
+ol.location-results a {
+  border-bottom: none;
+  text-decoration: none;
+}
+
 /* Results inside the map marker info pop-ups */
 .geolocation-common-map-container .result-counter {
-  float: left;
-  margin: 0.25em 0.75em 0 0;
+  margin: 0.25em 0.75em 0.25em 0;
 }
 
 .geolocation-common-map-container h2 {
   margin: 0;
   padding: 0;
+}
+
+.geolocation-common-map-container a {
+  border-bottom: none;
+  text-decoration: none;
 }
